# py_lib

./: CHANGELOG.md  README.md  file.py  pyproject.toml  setup.py  tui.py
.github/workflows/: pylint.yml
manucr19-py/: tui.py
manucr19_py/: __init__.py  tui.py
manucr19_py_lib/: __init__.py  file.py  tui.py
